--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
+    "@neo4j/graphql": "^2.3.0",
+    "apollo-server-micro": "^3.5.0",
+    "graphql": "^15.0.0",
+    "micro": "^9.3.4",
+    "neo4j-driver": "^4.4.0",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
