--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@neo4j/graphql": "^2.3.0",
+    "@supabase/supabase-js": "^2.47.12",
     "apollo-server-micro": "^3.5.0",
     "graphql": "^15.0.0",
     "micro": "^9.3.4",
     "neo4j-driver": "^4.4.0",
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.19.1"
+    "next": "^15.1.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.19.1",
+    "sass": "^1.83.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "^15.1.4"
   }
 }
